--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.90"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+chrono = "0.4.20"
