--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.90"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 chrono = "0.4.20"
+serde-xml-rs = "0.6.0"
